Fixing IE8/9 z-index;

--- a/jquery.fs.shifter.css
+++ b/jquery.fs.shifter.css
@@ -1,5 +1,5 @@
 /* 
- * Shifter v3.0.2 - 2014-01-20 
+ * Shifter v3.0.3 - 2014-02-19 
  * A jQuery plugin for simple slide-out mobile navigation. Part of the Formstone Library. 
  * http://formstone.it/shifter/ 
  * 
@@ -78,7 +78,7 @@
 	}
 
 	/* Open */
-	.shifter-open .shifter-navigation { pointer-events: all; z-index: 100\9; /* IE 9- */
+	.shifter-open .shifter-navigation { pointer-events: all; z-index: 1\9; /* IE9 */
 		-webkit-transform: translate3D(0px, 0px, 0px);
 		   -moz-transform: translate3D(0px, 0px, 0px);
 		    -ms-transform: translate3D(0px, 0px, 0px);
